- fixed text overflowing in card content and header

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,10 @@ a:hover {
   color: #535bf2;
 }
 
+.MuiCardHeader-content {
+  margin: auto;
+}
+
 body {
   margin: 0;
   display: flex;
